--- a/.gitignore
+++ b/.gitignore
@@ -48,6 +48,6 @@ Thumbs.db
 # Data (optional - zavisno da li želite da commit-ujete podatke)
 # data/
 
-# Results
-results/*.txt
-results/*.csv
+# Results - komentarisano da bi se videli rezultati na GitHub-u
+# results/*.txt
+# results/*.csv
